tests/rosetta/transpiler/C/balanced-brackets.error
compile failed: exit status 1: /tmp/ctranspile1661994380/balanced-brackets.mochi.c: In function ‘_mem’:
/tmp/ctranspile1661994380/balanced-brackets.mochi.c:47:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   47 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile1661994380/balanced-brackets.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile1661994380/balanced-brackets.mochi.c: In function ‘gen’:
/tmp/ctranspile1661994380/balanced-brackets.mochi.c:94:18: error: ‘arr_keys’ undeclared (first use in this function)
   94 |         int ch = arr_keys[__i];
      |                  ^~~~~~~~
/tmp/ctranspile1661994380/balanced-brackets.mochi.c:94:18: note: each undeclared identifier is reported only once for each function it appears in
/tmp/ctranspile1661994380/balanced-brackets.mochi.c:95:31: warning: passing argument 2 of ‘str_concat’ makes pointer from integer without a cast [-Wint-conversion]
   95 |         out = str_concat(out, ch);
      |                               ^~
      |                               |
      |                               int
/tmp/ctranspile1661994380/balanced-brackets.mochi.c:8:52: note: expected ‘const char *’ but argument is of type ‘int’
    8 | static char* str_concat(const char *a, const char *b) {
      |                                        ~~~~~~~~~~~~^

